[gd_scene load_steps=2 format=3 uid="uid://beso2nrvp2sod"]

[ext_resource type="Script" path="res://src/UI/MenuBar/Patterns/Scripts/directories_panel.gd" id="1_8efyg"]

[node name="DirectoriesPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_8efyg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DirectoryLineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Directory"

[node name="FileDialogButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "..."

[node name="AddButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+
"

[node name="RemoveButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="ItemList" type="ItemList" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(296, 138)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*")
use_native_dialog = true

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/FileDialogButton" to="." method="_on_file_dialog_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="item_selected" from="ScrollContainer/MarginContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
